# advent-of-code-2022

./: Makefile  README.md  pyproject.toml
AOC/: app.py
AOC/challenges/day-01/: README.md  app.py
AOC/challenges/day-01/elf/: __init__.py  elf.py
AOC/challenges/day-02/: README.md  app.py
AOC/challenges/day-02/rps/: __init__.py  rps.py
AOC/challenges/day-03/: README.md  app.py
AOC/challenges/day-03/backpack/: __init__.py  backpack.py
AOC/challenges/day-04/: README.md  app.py
AOC/challenges/day-04/elf/: __init__.py  elf.py
AOC/challenges/day-05/: README.md  app.py
AOC/challenges/day-05/stack_manager/: __init__.py  stack_manager.py
AOC/challenges/day-05/static/: puzzle_input.txt
AOC/challenges/day-06/: README.md  app.py
AOC/challenges/day-07/: README.md  app.py
AOC/challenges/day-07/device/: device.py
AOC/challenges/day-07/outputs/: file_size.txt  file_tree.txt
AOC/challenges/day-08/: README.md  app.py
AOC/challenges/day-08/outputs/: score_grid.txt  tree_grid.txt  visibility_grid.txt
AOC/challenges/day-08/tree_grid/: __init__.py  tree_grid.py
AOC/challenges/day-09/: README.md  app.py
AOC/challenges/day-09/rope/: __init__.py  knot.py
AOC/logger/: __init__.py  logger.py
